# papertrail

./: CLAUDE.md  JOURNAL.md  README.md
pt-app/: .cta.json  .gitignore  Dockerfile  Procfile  README.md  components.json  fly.toml.bak  index.html  package.json  tsconfig.client.json  tsconfig.json  tsconfig.server.json  vite.config.ts
pt-client-legacy/: README.md  components.json  package.json  tsconfig.bun.json
pt-server/: .dockerignore  .gitignore  Dockerfile  README.md  conftest.py  duplicate_authors_topic_https%3A%2F%2Fopenalex.org%2FT10001.json  fly.toml  main.py  openalex_entities_inspection.md  pyproject.toml  pytest.ini
pt-server/.tmp/: duckdb_temp_storage_DEFAULT-0.tmp  duckdb_temp_storage_S32K-0.tmp
pt-server/app/: dependencies.py  main.py
pt-server/app/internal/: base_model.py  db.py  duckdb.py  entities.py  logger.py  streamable.py  streaming.py
pt-server/app/sources/: open_alex.py  open_alex_api.py  scholarly.py
pt-server/scripts/: arxiv_harvester.py  open_alex_parquet.py  s2_datasets.py  test_jsonl_performance.py
pt-server/scripts/open_alex/: export_to_r2.py  open_alex_parquet.py  schemas.py
pt-server/scripts/open_alex/duckdb/: benchmark_search.py  denormalize.py  duckdb_tables.sql  inspect_denormalized.py  merge_partition_works.py  merge_partitions.py  migrate_authors.py  migrate_from_parquet.py  migrate_works.py  prepare_topics_search.py  prepare_works_search.py  setup_database.py  test.py  test_authors.py  test_works.py  works_backup.sql
pt-server/tests/: __init__.py  test_streaming.py
pt-server/tests/integration/: test_topic_search.py
(+93 files in other folders)
