[project]
name = "pt-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "anthropic>=0.49.0",
    "fastapi[standard]>=0.115.11",
    "greenlet>=3.1.1",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "scholarly>=1.7.11",
    "sentence-transformers>=4.0.2",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-libsql>=0.1.0",
    "sse-starlette>=2.2.1",
]
